themes/Embed-Friendly/design/custom.css
#Body {
	margin: 0;
	width: 99.9%;
	position: relative;
}
#Head {
	background: #3B5998;
	padding:0;
	margin: 20px 20px 0;
	text-align: left;
	position: relative;
}
div.Popup h1,
div.Popup h2 {
	background: #3b5998;
	border: none;
}
.Banner {
	padding: 10px;
	text-align: left;
	position: relative;
}
.Banner ul {
	background: #3B5998;
	padding: 0;
	margin: 0;
}
.Banner ul li {
	display: inline;
	padding: 0;
	margin: 0;
}
.Banner ul li a {
	font-weight: bold;
	padding: 3px 6px;
	font-size: 11px;
	color: #fff;
	display: inline-block;
}
.Banner ul li a:hover {
	background: #4b67a1;
}
.Banner ul li a.SignOut {
	font-weight: normal;
	position: absolute;
	top: 10px;
	right: 10px;
}
.Banner ul li a span {
	border-radius: 3px;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	padding: 1px 2px 0 1px;
	background: #f00;
	border-right: 1px solid #a00;
	border-bottom: 1px solid #a00;
	color: #fff;
	font-size: 9px;
	position: relative;
	top: -3px;
}
#Content {
	float: none;
	width: auto;
	margin: 0 280px 0 10px;
}
#Panel {
	float: right;
	margin-right: 10px;
}
#Panel div.SearchBox input.InputBox {
	width: 200px;
	margin-right: 4px;
}
div.SearchBox {
	margin-bottom: 6px;
}
body.Profile div.SearchBox {
	display: none;
}
body.Profile #Content {
	float:none;
	width: auto;
	margin: 0 10px 0 280px;
}
body.Profile #Panel {
	margin: 0 0 0 10px;
}
form.Activity textarea {
	width:99%;
}
#Foot div {
	width: auto;
}
body.Post #Content {
	margin:0 20px;
}
#ConversationForm textarea.MultiComplete,
#ConversationForm .TextBox,
#MessageForm textarea,
div.Comment div.CommentForm,
div.Comment div.CommentForm textarea,
div.CommentForm textarea,
#DiscussionForm input.InputBox,
#DiscussionForm textarea {
	width:99%;
}

/* Tabs */
div.Tabs {
	background: none;
	padding: 0;
	border-bottom: 1px solid #aaa;
}
div.Tabs ul {
	padding: 0 8px;
	white-space: nowrap;
}
div.MessageForm {
	padding: 8px 8px 5px;
}
div.MessageForm div.Tabs {
	padding: 0 8px;
}
div.Tabs li a,
div.Tabs li a:link,
div.Tabs li a:hover,
div.Tabs li a:active,
div.Tabs li a:visited {
	font-size: 11px;
   margin: 0;
   border: none;
   border-radius: 0;
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   background: none;
   color: #1E79A7;
   text-decoration: none;
   padding: 8px 10px;
	line-height: 11px;
}
div.Tabs li a:hover {
   text-decoration: underline;
}
a.Active,
div.Tabs li.Active a {
   background: #fff;
   color: #474747;
   margin: 0;
   border: 1px solid #aaa;
	border-bottom: none;
   border-radius: 3px 3px 0 0;
   -moz-border-radius: 3px 3px 0 0;
   -webkit-border-radius: 3px 3px 0 0;
   display: inline-block;
	font-size: 12px;
	line-height: 12px;
   font-weight: bold;
   text-decoration: none;
   padding: 6px 10px;
	position: relative;
	top: 1px;
}
div.Tabs li a span {
   line-height: 1;
   font-size: 80%;
   padding: 0 3px;
   border-radius: 3px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   font-weight: normal;
	background: #E3F4FF;
   color: #70727C;
   margin: 0 0 0 4px;
}
div.DiscussionsTabs div.SubTab {
	font-size: 11px;
	border-radius: 0;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	border-top: 1px solid #aaa;
	background: #f3f3f3;
	margin:0;
	padding:4px 8px;
}
div.HeadingTabs ul {
	margin: 8px 0 0;
}
body.Discussion a.Bookmark {
	margin: 6px 2px;
}
div.Preview {
	border: 1px solid #aaa;
	background: #fff;
	margin:0 0 8px;
	padding: 8px;
}
.Foot {
	background: none;
	border: none;
}
div.MorePager a,
div.MorePager a:link,
div.MorePager a:visited,
div.MorePager a:active,
div.MorePager a:hover {
	border-radius: 0;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	background: none;
	border: none;
	color: #1e79a7;
	line-height: 1;
	padding: 0;
	text-decoration: none;	
}
div.MorePager a:hover {
	color: #ff0084;
	text-decoration: underline;
}
body.add #Content {
	margin: 0 10px;
}

/* Panel Boxes */
div.Box {
	border-radius: 0;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	box-shadow: none;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	background: none;
	padding: 0;
}
div.Box h4 {
	color: #333;
}
ul.PanelInfo {
	border-top:1px solid #ccc;
}
ul.PanelInfo li,
ul.PanelInfo li.Active {
	background: none;
	border-bottom: 1px solid #ccc;
}
ul.PanelInfo li.Active {
	background: #ffd;
}
body.Profile ul.PanelInfo {
	border: none;
}
body.Profile ul.PanelInfo li {
	margin: 0;
	padding: 0;
}
body.Profile ul.PanelInfo li a {
	font-size: 12px;
	display: block;
	padding: 0 6px;
}
body.Profile ul.PanelInfo li a:hover {
	background: #D8DFEA;
}

/* Sign In Page */
body.Entry #Content div.Box {
	background: #efefef;
}
body.Entry #Panel {
	display: none;
}

/* Messages */
div.DismissMessage {
	background: #ffd;
	border: 1px solid #ccc;
	padding:6px 8px;
	border-radius: 3px;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
}
div.DismissMessage a.Dismiss:hover {
	color: #000;
}
div.Warning {
	background: #d00;
	border: 1px solid #b00;
	color: #fff;
	text-shadow: 1px 1px 1px #444;
}
div.Warning a.Dismiss {
	color: #fff;
}
#Content div.Box {
	color: #000;
	background: #D3F0FF;
	border: 1px solid #A5D0E7;
}

